v100 完善第一个版本

--- a/inrt/src/main/res/layout/activity_splash.xml
+++ b/inrt/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:src="@drawable/autojs_material"/>
+        android:src="@mipmap/ic_launcher"/>
 
     <TextView
         android:id="@+id/slug"
